mobile collapse fixed!

--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@ body {
   color: var(--white);
   font-family: 'Gilroy-Medium', sans-serif;
   font-size: 24px;
-  font-weight: 600;
+  font-weight: 500;
 }
 
 .nav-btn svg {
@@ -1064,6 +1064,11 @@ body {
   background: url("/assets/img/mainbg.png") !important;
 }
 
+.shefstvo-toggle-icon {
+  transition: transform 0.3s ease;
+  transform-origin: center;
+}
+
 @keyframes drawBorder {
   0%, 100% {
     border-color: #F16835;
@@ -1620,6 +1625,22 @@ a:hover {
   .divider-row {
     flex-direction: column;
     gap: 20px;
+    margin-left: 0px;
+  }
+
+  .cst-contact-btn.tel {
+    padding: 8px 16px !important;
+    width: 70% !important;
+  }
+
+  .cst-contact-btn.whatsapp {
+    padding: 8px 16px !important;
+    width: 90% !important;
+  }
+
+  .cst-contact-btn.telegram {
+    padding: 8px 16px !important;
+    width: 85% !important;
   }
 
   .more-articles-div {
@@ -1897,4 +1918,11 @@ a:hover {
     display: block !important;
   }
 
+  .swiper-wrapper {
+    margin-bottom: 20px;
+  }
+
+  .team-mobile .subtitle-h2 {
+    line-height: 134%;
+  }
 }
